syntax = "proto3";

package auth;

option go_package = "./proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
  string token = 2;
}
